<resources>
    <string name="app_name">VoiceAlarm</string>
    <string name="startMessage">Нажми кнопку и скажи напоминание</string>
    <string name="startRecording">Записать</string>
    <string name="confirmText">Все верно</string>
    <string name="editAccess">При необходимости можете вручную отредактировать</string>
    <string name="DismissAlarm">Выключить будильник</string>
    <string name="AlarmListButton">Будильники</string>
    <string name="create_alarm_manually">Создать вручную</string>
    <string name="alarm_list_back_button">Назад</string>
    <string name="alarm_create_title">Новый будильник</string>
    <string name="alarm_edit_title">Редактирование будильника</string>
    <string name="select_alarm_time">Выбрать время</string>
    <string name="default_alarm_time">06:00</string>
    <string name="select_alarm_date">Выбрать дату</string>
    <string name="alarm_message_hint">Текст напоминания</string>
    <string name="alarm_edit_back">Назад</string>
    <string name="save_alarm">Сохранить</string>
    <string name="delete_alarm">Удалить будильник</string>
    <string name="alarm_not_found">Будильник не найден</string>
    <string name="select_alarm_time_error">Выберите время</string>
    <string name="select_alarm_date_error">Выберите дату</string>
    <string name="invalid_alarm_date_time">Указаны некорректные дата или время</string>
    <string name="alarm_must_be_in_future">Будильник должен быть установлен на будущее</string>
    <string name="allow_notifications_to_save_alarm">Разрешите уведомления и повторите сохранение</string>
    <string name="allow_exact_alarms">Разрешите VoiceAlarm устанавливать точные будильники</string>
    <string name="allow_full_screen_alarms">Разрешите VoiceAlarm показывать будильник на весь экран</string>
    <string name="alarm_save_error">Не удалось сохранить будильник: %1$s</string>
    <string name="alarm_delete_error">Не удалось удалить будильник: %1$s</string>
    <string name="alarm_time_format">%1$02d:%2$02d</string>
    <string name="alarm_date_format">%1$02d.%2$02d.%3$04d</string>
    <string name="input_help_button_description">Показать формат команды</string>
    <string name="input_help_title">Как создать будильник</string>
    <string name="input_help_message">Формат:\nНапомни [число] [месяц] [необязательный год] в [час] часов [минуты] минут (минуты тоже опциональны) сообщение [текст напоминания]\n\nПримеры:\nНапомни десятого сентября в девять часов тридцать минут сообщение позвонить врачу\n\nНапомни двадцать пятого октября в двадцать один час сообщение сдать отчёт</string>
    <string name="understood">Понятно</string>
    <string name="app_version">Версия: %1$s</string>
</resources>
