<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    tools:context=".AlarmEditActivity">

    <TextView
        android:id="@+id/tvAlarmEditTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="22sp"
        android:textStyle="bold"
        tools:text="Новый будильник"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSelectTime"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:minWidth="200dp"
        android:minHeight="112dp"
        android:text="@string/default_alarm_time"
        android:textSize="64sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAlarmEditTitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSelectDate"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minHeight="56dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/select_alarm_date"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSelectTime" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/messageInputLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:layout_marginTop="56dp"
        android:hint="@string/alarm_message_hint"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSelectDate">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAlarmMessage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|start"
            android:inputType="textCapSentences|textMultiLine"
            android:overScrollMode="ifContentScrolls"
            android:padding="16dp"
            android:scrollbars="vertical"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDeleteAlarm"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/delete_alarm"
        android:textColor="?attr/colorError"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/messageInputLayout"
        app:strokeColor="?attr/colorError" />

    <LinearLayout
        android:id="@+id/alarmEditActions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancelAlarmEdit"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:text="@string/alarm_edit_back" />

        <Space
            android:layout_width="16dp"
            android:layout_height="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSaveAlarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_alarm" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
